# modern-xlsx

./: .gitattributes  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.cargo/: config.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml
crates/ironsheet-core/: Cargo.toml
crates/ironsheet-core/src/: dates.rs  errors.rs  lib.rs  number_format.rs  reader.rs  writer.rs
crates/ironsheet-core/src/ooxml/: cell.rs  content_types.rs  mod.rs  relationships.rs  shared_strings.rs  styles.rs  workbook.rs  worksheet.rs
crates/ironsheet-core/src/zip/: mod.rs  reader.rs  writer.rs
crates/ironsheet-wasm/: Cargo.toml
crates/ironsheet-wasm/src/: lib.rs
crates/modern-xlsx-core/: Cargo.toml
crates/modern-xlsx-core/examples/: read_bench.rs
crates/modern-xlsx-core/src/: dates.rs  errors.rs  lib.rs  number_format.rs  reader.rs  streaming.rs  streaming_writer.rs  validate.rs  writer.rs
crates/modern-xlsx-core/src/ole2/: crypto.rs  detect.rs  encryption_info.rs  mod.rs  writer.rs
crates/modern-xlsx-core/src/ooxml/: calc_chain.rs  cell.rs  charts.rs  comments.rs  content_types.rs  doc_props.rs  mod.rs  pivot_table.rs  relationships.rs  shared_strings.rs  slicers.rs  styles.rs  tables.rs  theme.rs  threaded_comments.rs  timelines.rs  workbook.rs  worksheet.rs
crates/modern-xlsx-core/src/ooxml/charts/: mod.rs  parser.rs  types.rs  writer.rs
crates/modern-xlsx-core/src/ooxml/worksheet/: json.rs  mod.rs  parser.rs  writer.rs
crates/modern-xlsx-core/src/zip/: mod.rs  reader.rs  writer.rs
crates/modern-xlsx-core/tests/: benchmarks.rs  golden_tests.rs  security_tests.rs
crates/modern-xlsx-core/tests/golden/: column_widths.json  comments.json  conditional_formatting.json  data_validation.json  frozen_pane.json  header_footer.json  hyperlinks.json  merge_cells.json  multi_sheet_roundtrip.json  page_setup.json  simple_roundtrip.json  styled_workbook.json
crates/modern-xlsx-wasm/: Cargo.toml
crates/modern-xlsx-wasm/src/: lib.rs
docs/: FEATURE-COMPARISON.md  SECURITY-AUDIT.md  api-audit.md  examples.md  migration-from-exceljs.md  migration-from-sheetjs.md
docs/guide/: barcodes.md  tables.md
docs/plans/: 2026-03-01-ironsheet-implementation.md  2026-03-01-ironsheet-phase1-design.md  2026-03-01-modern-xlsx-implementation.md  2026-03-01-modern-xlsx-phase1-design.md  2026-03-01-modern-xlsx-phase2-design.md  2026-03-01-modern-xlsx-phase2-plan.md  2026-03-02-release-roadmap-design.md  2026-03-02-table-layout-engine.md  2026-03-03-advanced-features-roadmap.md  2026-03-03-batch1-split-panes.md  2026-03-03-batch2-sheet-views.md  2026-03-03-batch3-workbook-protection.md  2026-03-03-batch4-sheet-management.md  2026-03-03-batch6-sparklines.md  2026-03-03-batch7-data-tables-external-links.md  2026-03-03-beat-sheetjs-design.md  2026-03-03-security-encryption-0.6.x.md  2026-03-03-tables-and-print-layout.md  2026-03-03-v050-parity-sprint.md  2026-03-04-charts-and-visualizations.md  2026-03-04-formulas-and-calculation.md  2026-03-04-v0.6.1-worker-encryption-dry.md  2026-03-05-comprehensive-audit-and-modernization.md  2026-03-05-v09x-advanced-features-design.md  2026-03-05-v09x-implementation-plan.md
docs/site/: index.html  playground.html
examples/angular/: excel-export.component.ts  xlsx.service.ts
examples/bun-test/: README.md  package.json  test.ts
examples/chart-dashboard/: README.md  index.mjs  package.json
examples/cloudflare-worker/: package.json  worker.ts  wrangler.toml
examples/csv-to-styled-xlsx/: README.md  data.csv  index.mjs  package.json
examples/demo-site/: README.md  index.html
examples/deno-deploy/: deno.json  main.ts
examples/deno-test/: README.md  deno.json  test.ts
examples/encrypted-payroll/: README.md  index.mjs  package.json
examples/export-sales-report/: README.md  index.mjs  package.json
examples/react/: ExcelExport.tsx  useXlsx.ts
examples/service-worker/: sw.js
examples/svelte/: ExcelExport.svelte  xlsx.svelte.ts
examples/vue/: ExcelExport.vue  useXlsx.ts
