[workspace]
resolver = "3"
members = [
    "crates/modern-xlsx-core",
    "crates/modern-xlsx-wasm",
]

[workspace.package]
# Rust crate version — independent from the npm package version (0.5.0)
version = "0.1.0"
edition = "2024"
rust-version = "1.94.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ABCrimson/modern-xlsx"

[workspace.dependencies]
# XML parsing — SAX-style, zero-copy, serde support
quick-xml = { version = "0.39.2", features = ["serialize"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }

# ZIP archive — v8 with pure-Rust deflate (zopfli write + flate2/zlib-rs read)
zip = { version = "8.1", default-features = false, features = ["deflate"] }

# Date/time without std::time
chrono = { version = "0.4", default-features = false, features = ["serde"] }

# Error handling
thiserror = "2.0"

# JSON serialization (golden file tests + JSON export)
serde_json = "1.0"

# Logging facade (zero-cost when no backend configured)
log = "0.4"

# Zero-alloc integer formatting for XML output
itoa = "1.0"

# WASM bindings
wasm-bindgen = "0.2.114"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Blob", "BlobPropertyBag", "console", "Performance"] }

# Cryptography — ECMA-376 Agile Encryption key derivation
sha2 = "0.10"
zeroize = { version = "1.8", features = ["derive"] }
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
hmac = "0.12"
constant_time_eq = "0.3"

# Dev
wasm-bindgen-test = "0.3"
pretty_assertions = "1.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
