[package]
name = "ironsheet-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ironsheet-core = { path = "../ironsheet-core" }
wasm-bindgen.workspace = true
js-sys.workspace = true
web-sys.workspace = true
serde.workspace = true
serde-wasm-bindgen.workspace = true

[dev-dependencies]
wasm-bindgen-test.workspace = true
