[package]
name = "modern-xlsx-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Rust core for reading and writing OOXML/XLSX files — ZIP, SAX XML parsing, shared string tables, styles"
keywords = ["xlsx", "excel", "ooxml", "spreadsheet", "xml"]
categories = ["encoding", "parser-implementations"]

[dependencies]
quick-xml.workspace = true
serde.workspace = true
zip.workspace = true
chrono.workspace = true
thiserror.workspace = true
log.workspace = true
itoa.workspace = true
serde_json.workspace = true
sha2.workspace = true
zeroize.workspace = true
aes.workspace = true
cbc.workspace = true
hmac.workspace = true
constant_time_eq.workspace = true
rayon = { version = "1.10", optional = true }

[features]
default = []
parallel = ["rayon"]

[dev-dependencies]
serde_json.workspace = true
pretty_assertions.workspace = true
