[package]
name = "modern-xlsx-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "Rust core for reading and writing OOXML/XLSX files — ZIP, SAX XML parsing, shared string tables, styles"
keywords = ["xlsx", "excel", "ooxml", "spreadsheet", "xml"]
categories = ["encoding", "parser-implementations"]

[dependencies]
quick-xml.workspace = true
serde.workspace = true
zip.workspace = true
chrono.workspace = true
thiserror.workspace = true
log.workspace = true
itoa.workspace = true
ryu.workspace = true
serde_json.workspace = true
rayon = { version = "1.10", optional = true }

# Cryptography — optional, behind "encryption" feature
digest = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
sha1 = { workspace = true, optional = true }
zeroize = { workspace = true, optional = true }
aes = { workspace = true, optional = true }
cbc = { workspace = true, optional = true }
hmac = { workspace = true, optional = true }
constant_time_eq = { workspace = true, optional = true }
getrandom = { workspace = true, optional = true }

[features]
default = ["encryption"]
encryption = [
    "dep:digest",
    "dep:sha2",
    "dep:sha1",
    "dep:zeroize",
    "dep:aes",
    "dep:cbc",
    "dep:hmac",
    "dep:constant_time_eq",
    "dep:getrandom",
]
parallel = ["rayon"]

[dev-dependencies]
serde_json.workspace = true
pretty_assertions.workspace = true
