[package]
name = "modern-xlsx-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "WASM bridge for modern-xlsx-core — wasm-bindgen exports for reading and writing XLSX in JavaScript"
keywords = ["xlsx", "wasm", "wasm-bindgen", "excel", "spreadsheet"]
categories = ["wasm", "encoding"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
modern-xlsx-core = { path = "../modern-xlsx-core", features = ["encryption"] }
wasm-bindgen.workspace = true
serde.workspace = true
serde_json.workspace = true
js-sys.workspace = true
web-sys.workspace = true
log.workspace = true

[dev-dependencies]
wasm-bindgen-test.workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory", "--enable-nontrapping-float-to-int", "--vacuous-drops"]
